orm-tests/tests/snapshots/query_turbo__duplicate_variable_name_properly_chain_bound_in_dedicated_block-2.snap
---
source: orm-tests/tests/query_turbo.rs
expression: query.fine_tune_params()
---
{
LET $var_name = $_param_00000001;

LET $var_name = $_param_00000002;

LET $var_name = $_param_00000003;

SELECT * FROM account;

RETURN $var_name;
}
