orm-tests/tests/snapshots/query_turbo__duplicate_variable_name_properly_chain_bound_in_dedicated_block.snap
---
source: orm-tests/tests/query_turbo.rs
expression: query.to_raw().build()
---
{
LET $var_name = (SELECT * FROM account);

LET $var_name = 'Oyedayo';

LET $var_name = 'Oyelowo';

SELECT * FROM account;

RETURN $var_name;
}
