orm-tests/tests/snapshots/query_turbo__duplicate_variable_name_properly_chain_bound_in_dedicated_transaction.snap
---
source: orm-tests/tests/query_turbo.rs
expression: query.to_raw().build()
---
BEGIN TRANSACTION;

LET $var_name = 'Oyelowo';

LET $var_name = 'Oyedayo';

LET $var_name = (SELECT * FROM account);

SELECT * FROM account;

COMMIT TRANSACTION;
	
