orm-tests/tests/snapshots/query_turbo__simple_standalone_for_loop-2.snap
---
source: orm-tests/tests/query_turbo.rs
expression: query.fine_tune_params()
---
FOR $name IN $_param_00000001 {
LET $new_bal = $_param_00000002;

SELECT * FROM account WHERE balance = $new_bal;
};
