orm-tests/tests/snapshots/query_turbo__simple_standalone_for_loop.snap
---
source: orm-tests/tests/query_turbo.rs
expression: query.to_raw().build()
---
FOR $name IN ['Oyelowo', 'Oyedayo'] {
LET $new_bal = 5;

SELECT * FROM account WHERE balance = $new_bal;
};
